2005-12-23 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/pkgadd.in: Fixed saying one thing and doing another. D'oh!
	* scripts/pkgunpack.in, scripts/pkginstall.in: Moved `init_install'
	  function from pkginstall to pkgunpack.

2005-12-18 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/prometheus: Fixed a syntax error.
	* scripts/pkgadd.in, scripts/pkginstall.in, scripts/pkginfo.in,
	  scripts/libprometheus.bash.in: Fixed a lot of bugs, syntax errors
	  and oversights.

2005-12-17 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/libprometheus.bash.in: Fixed calls to `usage_error'.
	* etc/REFERENCE.pkg: Corrected mention of default build dir.
	* profiles/libprometheus.bash.in: Fixed setting `package_builddir'
	  to a wrong value.
	* profiles/libprometheus.bash.in: Fixed a call to `get_deps' with a
	  missing "mode" parameter.
	* profiles/libprometheus.bash.in: Fixed positional parameters in
	  privilege handling functions.
	* profiles/libprometheus.bash.in: `get_compression_suffix' is called
	  `get_suffix' nowadays.
	* profiles/lfs-6.1/expect: Added a missing quote.
	* scripts/pkginfo.in: Fixed a bug in the `query_all' function.

2005-12-16 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* etc/prometheus.conf.in: Removed unused config variables.
	* scripts/pkgadd.in: Corrected call to `get_dependencies'.

2005-12-14 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/*.pkg: Removed the .pkg extension from the profiles.

2005-12-11 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/libprometheus.bash.in, scripts/pkgrm.in, scripts/pkgbuild.in,
	  scripts/pkgcheck.in, scripts/pkgget.in, scripts/pkgunpack.in,
	  scripts/pkginstall.in: Rewrote privilege handling.

2005-12-10 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/pkginstall.in: Rewrote parts to use the new install-log/
	  reroot setup.
	* scripts/libprometheus.bash.in, scripts/pkgget.in, scripts/pkgrm.in: